src/objects/AcetErrorMessage__mdt.object
<CustomObject>
    <description>It contains Error Code and corresponding Message needed to Display</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_log_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error log enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message_Type__c</fullName>
        <label>Message Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                    <default>true</default>
                    <label>Error</label>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Confirm</fullName>
                </value>
                <value>
                    <fullName>Fatal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pages_Referenced__c</fullName>
        <description>Listing of all pages referencing this code.</description>
        <label>Pages Referenced</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ServiceError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopPriority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TopPriority</label>
        <type>Checkbox</type>
    </fields>
    <label>Acet Error Message</label>
    <listViews>
        <fullName>ACET_Error</fullName>
        <columns>MasterLabel</columns>
        <columns>Error_Message__c</columns>
        <columns>Message_Type__c</columns>
        <columns>Error_log_enabled__c</columns>
        <columns>ServiceError__c</columns>
        <columns>TopPriority__c</columns>
        <columns>Pages_Referenced__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>ACET Error</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Acet Error Messages</pluralLabel>
</CustomObject>